Change device filter to allow only Taisync USB accessory

--- a/android/res/xml/device_filter.xml
+++ b/android/res/xml/device_filter.xml
@@ -2,6 +2,6 @@
 <resources>
     <!-- Allow anything connected -->
     <usb-device />
-    <usb-accessory />
+    <usb-accessory model="android.usbaoa" manufacturer="taisync" version="1.0"/>
 </resources>
 
