--- a/custom/auterion.qrc
+++ b/custom/auterion.qrc
@@ -4,8 +4,11 @@
         <file alias="QGCLogoWhite">res/images/toolbar_logo.svg</file>
     </qresource>
     <qresource prefix="/auterion">
+        <file alias="AuterionBatteryIndicator.qml">res/AuterionBatteryIndicator.qml</file>
         <file alias="AuterionCameraControl.qml">res/AuterionCameraControl.qml</file>
         <file alias="AuterionFlyView.qml">res/AuterionFlyView.qml</file>
+        <file alias="AuterionGPSIndicator.qml">res/AuterionGPSIndicator.qml</file>
+        <file alias="AuterionRCRSSIIndicator.qml">res/AuterionRCRSSIIndicator.qml</file>
     </qresource>
     <qresource prefix="/auterion/img">
         <file alias="camera_switch_elapsed_mode.svg">res/images/camera_switch_elapsed_mode.svg</file>
@@ -13,18 +16,35 @@
         <file alias="camera_switch_photo_mode.svg">res/images/camera_switch_photo_mode.svg</file>
         <file alias="camera_switch_video.svg">res/images/camera_switch_video.svg</file>
         <file alias="camera_switch_video_mode.svg">res/images/camera_switch_video_mode.svg</file>
+        <file alias="label_left_edge.svg">res/images/label_left_edge.svg</file>
+        <file alias="label_right_edge.svg">res/images/label_right_edge.svg</file>
+        <file alias="menu_battery.svg">res/images/menu_battery.svg</file>
+        <file alias="menu_flight.svg">res/images/menu_flight.svg</file>
+        <file alias="menu_gear.svg">res/images/menu_gear.svg</file>
+        <file alias="menu_gps.svg">res/images/menu_gps.svg</file>
+        <file alias="menu_logo.svg">res/images/menu_logo.svg</file>
+        <file alias="menu_plan.svg">res/images/menu_plan.svg</file>
+        <file alias="menu_rc.svg">res/images/menu_rc.svg</file>
+        <file alias="menu_signal_0.svg">res/images/menu_signal_0.svg</file>
+        <file alias="menu_signal_100.svg">res/images/menu_signal_100.svg</file>
+        <file alias="menu_signal_25.svg">res/images/menu_signal_25.svg</file>
+        <file alias="menu_signal_50.svg">res/images/menu_signal_50.svg</file>
+        <file alias="menu_signal_75.svg">res/images/menu_signal_75.svg</file>
         <file alias="odometer.svg">res/images/odometer.svg</file>
         <file alias="sliders.svg">res/images/sliders.svg</file>
         <file alias="time.svg">res/images/time.svg</file>
         <file alias="void.png">res/images/void.png</file>
     </qresource>
     <qresource prefix="/Auterion/Widgets">
-        <file alias="Auterion/Widgets/qmldir">res/Auterion/Widgets/qmldir</file>
         <file alias="Auterion/Widgets/AuterionFactCombo.qml">res/Auterion/Widgets/AuterionFactCombo.qml</file>
+        <file alias="Auterion/Widgets/AuterionLabel.qml">res/Auterion/Widgets/AuterionLabel.qml</file>
+        <file alias="Auterion/Widgets/AuterionSignalStrength.qml">res/Auterion/Widgets/AuterionSignalStrength.qml</file>
+        <file alias="Auterion/Widgets/AuterionToolBarButton.qml">res/Auterion/Widgets/AuterionToolBarButton.qml</file>
         <file alias="Auterion/Widgets/OnOffSwitch.qml">res/Auterion/Widgets/OnOffSwitch.qml</file>
+        <file alias="Auterion/Widgets/qmldir">res/Auterion/Widgets/qmldir</file>
     </qresource>
     <qresource prefix="/qml">
-        <file alias="QGroundControl/Controls/QGCToolBarButton.qml">res/AuterionToolBarButton.qml</file>
+        <file alias="QGroundControl/Controls/MainToolBar.qml">res/MainToolbar/AuterionMainToolBar.qml</file>
     </qresource>
     <qresource prefix="/auterion/wav">
         <file alias="beep.wav">res/audio/beep.wav</file>
