--- a/custom/auterion.qrc
+++ b/custom/auterion.qrc
@@ -16,12 +16,15 @@
         <file alias="attitude_dial.svg">res/images/attitude_dial.svg</file>
         <file alias="attitude_pointer.svg">res/images/attitude_pointer.svg</file>
         <file alias="camera_photo.svg">res/images/camera_photo.svg</file>
-        <file alias="camera_video.svg">res/images/camera_video.svg</file>
-        <file alias="camera_switch_elapsed_mode.svg">res/images/camera_switch_elapsed_mode.svg</file>
         <file alias="camera_settings.svg">res/images/camera_settings.svg</file>
+        <file alias="camera_switch_elapsed_mode.svg">res/images/camera_switch_elapsed_mode.svg</file>
+        <file alias="camera_video.svg">res/images/camera_video.svg</file>
         <file alias="chevron_right.svg">res/images/chevron_right.svg</file>
         <file alias="compass_dial.svg">res/images/compass_dial.svg</file>
         <file alias="compass_pointer.svg">res/images/compass_pointer.svg</file>
+        <file alias="gimbal_icon.svg">res/images/gimbal_icon.svg</file>
+        <file alias="gimbal_pitch.svg">res/images/gimbal_pitch.svg</file>
+        <file alias="gimbal_position.svg">res/images/gimbal_position.svg</file>
         <file alias="label_left_edge.svg">res/images/label_left_edge.svg</file>
         <file alias="label_right_edge.svg">res/images/label_right_edge.svg</file>
         <file alias="menu_battery.svg">res/images/menu_battery.svg</file>
@@ -37,9 +40,7 @@
         <file alias="menu_signal_25.svg">res/images/menu_signal_25.svg</file>
         <file alias="menu_signal_50.svg">res/images/menu_signal_50.svg</file>
         <file alias="menu_signal_75.svg">res/images/menu_signal_75.svg</file>
-        <file alias="odometer.svg">res/images/odometer.svg</file>
         <file alias="sliders.svg">res/images/sliders.svg</file>
-        <file alias="time.svg">res/images/time.svg</file>
         <file alias="void.png">res/images/void.png</file>
     </qresource>
     <qresource prefix="/Auterion/Widgets">
