--- a/custom/qgcresources.qrc
+++ b/custom/qgcresources.qrc
@@ -206,6 +206,7 @@
 		<file alias="PowerButton">../resources/PowerButton.svg</file>
 		<file alias="QGCLogoBlack">../resources/QGCLogoBlack.svg</file>
 		<file alias="QGCLogoWhite">../resources/QGCLogoWhite.svg</file>
+		<file alias="QGCLogoArrow">../resources/QGCLogoArrow.svg</file>
 		<file alias="QGroundControlConnect">../resources/QGroundControlConnect.svg</file>
 		<file alias="rtl.svg">../resources/rtl.svg</file>
 		<file alias="SplashScreen">../resources/SplashScreen.png</file>
