--- a/custom/qgroundcontrol.qrc
+++ b/custom/qgroundcontrol.qrc
@@ -3,6 +3,7 @@
 		<file alias="FactSystemTest.qml">../src/FactSystem/FactSystemTest.qml</file>
 	</qresource>
 	<qresource prefix="/toolbar">
+		<file alias="MessageIndicator.qml">../src/ui/toolbar/MessageIndicator.qml</file>
 	</qresource>
 	<qresource prefix="/qml">
 		<file alias="CorridorScanEditor.qml">../src/PlanView/CorridorScanEditor.qml</file>
@@ -198,6 +199,7 @@
 		<file alias="VirtualJoystick.qml">../src/FlightDisplay/VirtualJoystick.qml</file>
 	</qresource>
 	<qresource prefix="/json">
+		<file alias="APMMavlinkStreamRate.SettingsGroup.json">../src/Settings/APMMavlinkStreamRate.SettingsGroup.json</file>
 		<file alias="CameraCalc.FactMetaData.json">../src/MissionManager/CameraCalc.FactMetaData.json</file>
 		<file alias="CameraSpec.FactMetaData.json">../src/MissionManager/CameraSpec.FactMetaData.json</file>
 		<file alias="CorridorScan.SettingsGroup.json">../src/MissionManager/CorridorScan.SettingsGroup.json</file>
