--- a/custom/qgcresources.qrc
+++ b/custom/qgcresources.qrc
@@ -80,6 +80,7 @@
 		<file alias="Frames/Vectored6DOF.png">../src/AutoPilotPlugins/APM/Images/vectored6dof-frame.png</file>
 		<file alias="Frames/SimpleROV-3.png">../src/AutoPilotPlugins/APM/Images/simple3-frame.png</file>
 		<file alias="Frames/SimpleROV-4.png">../src/AutoPilotPlugins/APM/Images/simple4-frame.png</file>
+		<file alias="Frames/SimpleROV-5.png">../src/AutoPilotPlugins/APM/Images/simple5-frame.png</file>
 		<file alias="LogDownloadIcon">../src/AnalyzeView/LogDownloadIcon.svg</file>
 		<file alias="LowBattery.svg">../src/AutoPilotPlugins/PX4/Images/LowBattery.svg</file>
 		<file alias="LowBatteryLight.svg">../src/AutoPilotPlugins/PX4/Images/LowBatteryLight.svg</file>
@@ -176,6 +177,8 @@
 		<file alias="subVehicleArrowOpaque.png">../src/FlightMap/Images/sub.png</file>
 		<file alias="AlertAircraft.svg">../src/FlightMap/Images/AlertAircraft.svg</file>
 		<file alias="AwarenessAircraft.svg">../src/FlightMap/Images/AwarenessAircraft.svg</file>
+		<file alias="no-logging.svg">../src/AutoPilotPlugins/PX4/Images/no-logging.svg</file>
+		<file alias="no-logging-light.svg">../src/AutoPilotPlugins/PX4/Images/no-logging-light.svg</file>
 	</qresource>
 	<qresource prefix="/res">
 		<file alias="AntennaRC">../resources/Antenna_RC.svg</file>
